@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam nodesep 40
skinparam ranksep 50
' Strategy - scontistica del buono promozionale
class "Ordine" as Ord {
  - totale: double
  - buonoApplicato: BuonoPromozionale (0..1)
  + applicaBuono(BuonoPromozionale)
  + ricalcolaTotale()
}
class "BuonoPromozionale" as B {
  - codice: String
  - dataScadenza: LocalDate
  - strategiaSconto: ScontoStrategy
  + isValido() : boolean
  + applicaSconto(double) : double
}
interface "ScontoStrategy" as SS <<interface>> {
  + applicaSconto(double) : double
  + descrizione() : String
  + getTipo() : String
}
class "ScontoPercentualeStrategy" as SP {
  - percentuale: double
}
class "ScontoImportoFissoStrategy" as SF {
  - importo: double
}
class "ScontoStrategyFactory" as SSF {
  {static} + createStrategy(String, double) : ScontoStrategy
}
Ord "0..1" o-- B : buonoApplicato
B "1" *-- "1" SS : strategia
SP -up-|> SS
SF -up-|> SS
SSF ..> SP : crea
SSF ..> SF : crea
@enduml
